--- a/package.json
+++ b/package.json
@@ -1,26 +1,45 @@
 {
   "name": "next-tailwind-boilerplate",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "commit": "cz",
+    "release:alpha": "standard-version --prerelease alpha",
+    "release": "standard-version"
   },
   "dependencies": {
+    "cz-customizable": "^7.4.0",
+    "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.18"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.18",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.18"
+    "typescript": "^5",
+    "standard-version": "^9.5.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "config/cz-config.js"
+    }
   }
 }
